--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <input type="text" id="firstname" name="firstname">
                 <!-- TODO: Create a "lastname" input with type "text" -->
                 <label for="lastname">Your Last Name</label>
+                <input type="text" id="lastname" name="lastname">
             </div>
             <!-- TODO: Make fieldset and legend -->
             <fieldset>
@@ -100,7 +101,7 @@
             <label for="color">Favorite Color</label>
             <input type="color" id="color" name="color">
             <!-- TODO: Checkboxes for selecting extra add-ons -->
-            <label for="add-ons">Extra Add-Ons</label>
+            <label for="add-ons">Extra Add-Ons:</label>
             <input type="checkbox" id="add-ons" name="add-ons" value="Bike">Bike
             <input type="checkbox" id="add-ons" name="add-ons" value="Ski">Ski
             <input type="checkbox" id="add-ons" name="add-ons" value="Snowboard">Snowboard
