--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
         <h2>Vacation Contest Sign-Up Form</h2>
         <form method="GET"> <!-- TODO: Set Action and Method Properties -->
             <div>
-                <label for="firstname">Your First Name</label>
-                <input type="text" id="firstname" name="firstname">
+                <label for="firstname">Your First Name</label><span class="required-field">*</span>
+                <input type="text" id="firstname" name="firstname" required minlength="2" maxlength="35">
                 <!-- TODO: Create a "lastname" input with type "text" -->
-                <label for="lastname">Your Last Name</label>
-                <input type="text" id="lastname" name="lastname">
+                <label for="lastname">Your Last Name</label><span class="required-field">*</span>
+                <input type="text" id="lastname" name="lastname" required minlength="2" maxlength="35">
+                <label for="age">Your Age</label>
+                <input type="number" name="age" id="age" min="21" max="120">
+                <h5>One must be age 21 or older to enter the contest</h5>
             </div>
             <!-- TODO: Make fieldset and legend -->
             <fieldset>
@@ -41,8 +44,8 @@
                         <option value="South Africa">South Africa</option>
                     </select>
             <!-- Todo: Email Input -->
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email">
+            <label for="email">Email</label><span class="required-field">*</span>
+            <input type="email" id="email" name="email" required>
             <!-- Todo: Street Address Input -->
             <label for="street">Street Address</label>
             <input type="text" id="street" name="street">
@@ -52,9 +55,6 @@
             <label for="state">State</label>
             <input type="text" id="state" name="state">
             <label for="zip">Zip</label>
-            <input type="text" id="zip" name="zip">
-
-
 
             <!-- TODO: Second fieldset -->
             <fieldset>
